enahced json output with time, added traditional filter
